_sass/styles.scss
@import "reset";
@import "web-fonts";

@import "colors";

@import "typography";


@import "forms";
@import "buttons-notices";
@import "grid";


#socialLinks {
  margin-bottom: 1.5em;
}

#socialLinks a {
  display: block;
  float: left;
  width: 1em;
  height: 1em;
  border: 0;
  margin-right: 4.190909090909090909%;/* 9/220 */
  margin-bottom: 0.5em;
  color: lighten($alpha-gray, 14);
  font-size: 3em;
  line-height: 1;
  font-family: 'Icons';
  font-style: normal;
  speak: none;

  &:last-child {
    margin-right: 0;
  }

  &:hover, &:active {
    color: $href-hover-color;
  }
}
#socialLinks a span {
  display: none;
}
#email:after {
  content: "\26cd";
}
#twitter:after {
  content: "\26ba";
}
#github:after {
  content: "\26c7";
}
#flickr:after {
  content: "\26c3";
}
#gplus:after {
  content: "\26bd";
}


@import "twitter-feed";

header {
	width: 100%;
	float: left;
	padding: 1.5em 0 0.6em;
	margin-bottom: 1.45em;
	border-bottom: 1px solid $border-color;
}
header h1 {
	width: 74.468085106382978723%;/* 700/940 */
	float:left;
	font-size: 6.75em;
	margin-bottom: -1.5em;
	line-height: 1;
}
header a {
	color: lighten($alpha-gray, 14);
	display: inline-block;
	padding-top: 2px;
}
header h2 {
	width: 23.4104255319148936170%;/* 220/940 */
	float:right;
	text-align: right;
	line-height: 1.33;
	margin: 0 0 0.625em;
	font-size: 1.5em;
}
header h2 span {
	display: inline-block;
	width: 100%;
}
header h2 span:last-child {
  display: block;
}


h2 a {
  display: inline-block;
}





article header {
	width: 100%;
	float: none;
	padding: 0;
	margin: 0;
	border: 0;
}
article header h1 {
	width: auto;
	float: none;
	font-size: 3em;
	line-height: 1;
	margin-bottom: 0.5em;
}
article header a {
	color: auto;
	display: inline-block;
	padding: 0;
}
article header h2 {
	width: auto;
	float: none;
	text-align: left;
	font-size: 2em;
	margin-bottom: 0.75em;
	line-height: inherit;
}


footer {
  clear: both;
  width: 100%;
}
nav {
  width: 100%;
  float: left;
}
nav ul {
  list-style: none;
  float: left;
  margin: 0;
  padding: 0;
  width: 100%;
}
nav li {
  display: block;
  float: left;
  margin-right: 2.5em;

  &:last-child {
    margin-right: 0;
  }
}
header nav {
  @extend %secondary-font-family;

  margin-bottom: 0;
}
header nav ul {
  font-size: 2em;
}
header nav a {
  display: inline-block;
}
nav li.page-.home, nav ul ul, nav li.ancestor ul ul {
  display: none;
}


#main {
  @extend %span-9;
}
#sidebar {
  @extend %span-3;

  text-align:center;
  margin-right: 0;
}
.span-half {
  @extend %span-6;

  overflow-y: scroll
}
.span-half + .span-half {
  margin-right: 0;
}

.pg-work section {
  @extend %span-12;

	margin-bottom:1.5em;
	border-top:1px solid $border-color;
	padding-top:2.95em;

  &:first-of-type {
    border: 0;
    padding: 0;
  }

  h1 {
    @extend %heading-4;
  }

  img {
    float: left;
    -webkit-box-shadow: 1px 2px 4px transparentize($alpha-gray, 0.5);
    box-shadow: 1px 2px 4px transparentize($alpha-gray, 0.5);
    margin-right: 2.857142857142857142%;
    margin-bottom: 1.5em;
    width: 54.29%; /* 380/700 */
  }

  ul {
    @extend %span-4;

    list-style: none;
    padding-left: 0;
    margin-right:0;
  }

  li {
    float: left;
    display: block;
    margin-right: 1.25em;
  }
}






// @import "contact";


article {
  border-top: 1px solid $border-color;
  padding-top: 1.5em;
  margin-bottom: 1.5em;
  clear: both;
}
article.first {
  border-top: 0;
  padding-top: 0;
}
article.last {
  margin-bottom: 0;
}
article:only-child, article:first-child {
  border-top: 0;
  padding-top: 0;
}
article:last-child {
  margin-bottom: 0;
}

article h1 .date {
  color: $bravo-gray;
  font-size: 0.3em;
}
article .mod_date {
  @extend %secondary-font-family;

  color: $bravo-gray;
  font-size: 0.875em;
  display: block;
  width: 100%;
  line-height: 1.71428571428571428571em;
}

.notes header, .notes header h1, .notes #main {
  float: none;
}
.notes header h1 {
  display: block;
  margin-bottom: 0;
}
.notes header, .notes #main, .resume #main {
  width: 100%;
}

.notes {
  colgroup, tr {
    @extend %background-transition;
  }

  .hover {
    @extend %background-transition;

    background: transparentize($alpha-color-charlie, 0.5);
  }

  th {
    @extend %background-transition;
    cursor: pointer;

    &:active {
      @extend %background-transition;
      background: $bravo-color-bravo;
    }
    &.selected {
      @extend %background-transition;

      background: $bravo-color-charlie;
    }
  }

  tr td:first-child {
    @extend %background-transition;

    cursor: pointer;

    &:active {
      @extend %background-transition;
      background: $charlie-color-bravo;
    }
  }

  .missed {
    background: $delta-color-charlie;
  }

  .warning {
    background: $fox-color-bravo;
  }

  .good {
    background: $bravo-color-charlie;
  }
}


.pg-blog article.link header a:after {
  font-family: 'Icons';
  speak: none;
  padding-left:0.4em;
  content: '\26e2';
}

ol.posts {
  list-style:none;
  padding:0;
}

article.post {
  border-bottom: 1px solid $border-color;
  padding-bottom: 1.5em;
  margin-bottom: 1.5em;
  clear: both;
}
.entry-content img {
  max-width: 100%;
  margin-bottom: 1.5em;
}



@import "clearing";


.pg-readmore pre {
  margin: 0;
}
.pg-readmore .highlight {
  margin-bottom: 1.5em;
}
.pg-readmore .slide + a {
  margin-top: -1em;
  margin-bottom: 1.5em;
}

.pg-readmore #info + .readmore-js-toggle {
  padding-bottom: 4.5em;
}

.pg-readmore #demo {
  border-top: 1px solid $border-color;
  padding-top: 3em;
}


/**
 * Media queries for responsive design.
 *
 * These follow after primary styles so they will successfully override.
 */

@media all and (orientation: portrait) {
  /* Style adjustments for portrait mode goes here */
}

@media all and (orientation: landscape) {
  /* Style adjustments for landscape mode goes here */
}
/* ... */

